# trep_urdf_demo

./: CMakeLists.txt  README.md  package.xml
launch/: puppet.launch  puppet.rviz  rrbot.launch  rrbot.rviz
src/: int_markers.py  puppet.py  rrbot.py
urdf/: puppet.urdf  rrbot.urdf  string.urdf
